--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TouristCompany">
-        <activity android:name=".data.RegisterActivity"></activity>
+        <activity android:name=".presentation.LoveActivity"></activity>
+        <activity android:name=".data.RegisterActivity" />
         <activity android:name=".data.LoginActivity" />
         <activity android:name=".presentation.InfoActivity" />
         <activity android:name=".presentation.MainActivity">
